--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,16 @@ csv_files
 saved_models/
 saved_models/*
 
+selected_model/
+selected_model/*
+
+test_data/
+test_data/*
+
+speaker_classification.ipynb
+speaker_classification.ipynb/
+output/
+output/*
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
